# stock-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 0001_core_schema.py  11ad3a852579_remove_fk_constraint_from_report.py  4004af24b4b3_remove_fk_constraint_from_report_symbol.py
src/: Dockerfile  config.py  main.py  pyproject.toml  util.py  vault.py
src/api/: routes.py
src/db/: models.py  session.py
src/migrations/: env.py
src/migrations/versions/: 31f53624b1e6_add_ticker_table_and_article_body.py
src/news/: body_fetcher.py  fetcher.py
src/schemas/: __init__.py  market.py
src/services/: llm_service.py  price_service.py  prompts.py  reports.py  tickers.py
src/streaming/: dispatcher.py
src/test/: test_ai_summary_service.py  test_util.py
web/: Dockerfile  middleware.tsx  package.json  pnpm-lock.yaml
web/api/: client.ts  http.ts  reports.ts
web/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/app/dashboard/: page.tsx
web/components/: MarketSummary.module.css  MarketSummary.tsx  NewsFeed.module.css  NewsFeed.tsx  TickerSelector.module.css  TickerSelector.tsx
web/components/briefing/: BriefingHistory.module.css  BriefingHistory.tsx
web/components/layout/: AppShell.module.css  AppShell.tsx
web/components/ui/: Badge.tsx  Button.tsx  Sparkline.tsx
web/config/: env.ts
web/hook/: useDashboard.ts  useNewsStream.ts
web/i18n/: index.ts
web/messages/: ko.json
web/providers/: AppProviders.tsx
web/types/: market.ts  news.ts  reports.ts
(+4 files in other folders)
