[tool.poetry]
name = "stockapp-backend"
version = "0.1.0"
description = "FastAPI service for aggregating stock news in real time."
authors = ["Daniel Kim <daniel@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
httpx = "^0.26.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
playwright = "^1.41.0"
psycopg = {version = "^3.1", extras = ["binary"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
